# sibylla

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/sibylla-artifacts/: Cargo.toml
crates/sibylla-artifacts/src/: lib.rs
crates/sibylla-artifacts/tests/: artifacts.rs  consumer_contract.rs
crates/sibylla-core/: Cargo.toml
crates/sibylla-core/src/: error.rs  hash.rs  id.rs  identity.rs  lib.rs  manifest.rs  reading.rs  spread.rs  time.rs  validation.rs
crates/sibylla-core/tests/: identities.rs  manifests.rs  readings.rs  spreads.rs
crates/sibylla-shuffle/: Cargo.toml
crates/sibylla-shuffle/src/: lib.rs
crates/sibylla-shuffle/tests/: shuffle.rs
docs/: ARTIFACTS.md  DOMAIN_MODEL.md  MILESTONES.md  PROJECT_ORGANIZATION.md  ROADMAP.md  SHUFFLE.md
fixtures/artifacts/: PROVENANCE.md  deck-envelope-v1.sha256  reading-envelope-v1.sha256
fixtures/decks/: PROVENANCE.md  conventional-78-v1.json  extension-tradition-v1.json  extension-tradition-v1.sha256
fixtures/readings/: PROVENANCE.md  manual-three-card-v1.json
fixtures/shuffle/: PROVENANCE.md  fisher-yates-v1.json
fixtures/spreads/: freeform-three-v1.json
