[workspace]
members = ["crates/sibylla-core"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gracee3/sibylla"
rust-version = "1.97"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "=1.0.151"
thiserror = "2.0.12"
