[workspace]
members = ["crates/sibylla-core", "crates/sibylla-shuffle"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/gracee3/sibylla"
rust-version = "1.97"

[workspace.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "std"] }
getrandom = "0.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "=1.0.151"
sha2 = "0.10.9"
thiserror = "2.0.12"
