[package]
name = "sibylla-artifacts"
version = "0.1.0"
description = "Stable artifact envelopes for the Sibylla tarot engine"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sibylla-core = { version = "0.1.0", path = "../sibylla-core" }
thiserror.workspace = true
