[package]
name = "sibylla-shuffle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cryptographically secure versioned tarot shuffling for Sibylla"

[dependencies]
getrandom.workspace = true
sha2.workspace = true
sibylla-core = { version = "0.1.0", path = "../sibylla-core" }
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
